app/assets/stylesheets/application.css
/*
 *= require font-awesome
 */

@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  letter-spacing: 0.03rem;
  color: #ffffff;
}

body {
  margin: auto;
  padding: 0 1rem;
  max-width: 1000px;
  background: #1a1a1a;
  color: #ffffff;
  font-family: "Poppins", sans-serif;
}

.dark-icon {
  color: #1a1a1a;
}

.button {
  padding: 10px 16px;
  border-radius: 6px;
  background-color: #ffffff;
  color: #1a1a1a;
  border: none;
  cursor: pointer;
  font-weight: 600;
}

.text-button {
  padding: 10px 16px;
  border-radius: 6px;
  background-color: transparent;
  border: none;
  cursor: pointer;
  font-weight: 600;
}

.link {
  text-decoration: none;
  font-size: medium;
  font-weight: normal;
}

.button-link {
  width: 100%;
  text-decoration: none;
  font-size: medium;
  font-weight: normal;
  color: #1a1a1a;
}

.todo-lists-header,
.list-items-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 2rem 0rem;
}

.todo-list-ul,
.list-item-ul {
  display: grid;
  grid-template-areas: 1fr;
  gap: 0.5rem;
  margin-bottom: 0.5rem;
}

.todo-list-li {
  border-radius: 6px;
  padding: 4px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
}

.todo-list-li:hover {
  background-color: #242424;
  transition: 0.2s ease-in-out;
}

.list-item-li {
  border-radius: 6px;
  padding: 12px 8px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1rem;
  background-color: #1F1F1F;
  border: 1px solid #242424;
  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.12);
}

.todo-list-title-container,
.list-item-title-container {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  width: 100%;
  height: 100%;
}

.todo-list-color {
  width: 3px;
  height: 34px;
  border-radius: 4px;
}

.todo-list-link-container {
  display: flex;
  align-items: center;
  flex-grow: 1;
  height: 100%;
}

.todo-list-link {
  display: flex;
  align-items: center;
  width: 100%;
  height: 100%;
}

.list-item-details {
  display: flex;
  align-items: center;
  gap: 1rem;
  margin: 0.5rem 0 0 24px;
  font-size: 14px;
}

.todo-list-options,
.list-item-options {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.list-items-title-container {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.checked-list-item-title {
  text-decoration: line-through;
}

.list-item-info-container {
  display: block;
}

.unchecked-button,
.checked-button {
  width: 16px;
  height: 16px;
  border-radius: 4px;
  background-color: #ffffff;
  border: 1px solid #242424;
  cursor: pointer;
}

.high-priority-tag, .medium-priority-tag, .low-priority-tag {
  border-radius: 4px;
  padding: 2px 6px;
  font-weight: 500;
  font-size: 12px;
}

.high-priority-tag {
  color: #B90000;
  background-color: rgba(252, 135, 135, 0.2);
  border: 1px solid rgb(185, 0, 0, 0.3);
}

.medium-priority-tag {
  color: #C69E11;
  background-color: rgba(244, 226, 130, 0.2);
  border: 1px solid rgb(198, 158, 17, 0.3);
}

.low-priority-tag {
  color: #1675b4;
  background-color: rgba(135, 201, 252, 0.2);
  border: 1px solid rgb(22, 117, 180, 0.3);
}

